# archestra

./: .gitignore  EXTERNAL_CONTRIBUTORS.md  LICENSE.md  LICENSE_ENTERPRISE  README.md
.agent.local/demos/: onboarding-smtp-flow.webm
.github/: CODEOWNERS  dependabot.yml  values-ci.yaml  values-staging.yaml
.github/bench/: Dockerfile  README.md  job.yaml  runner-entrypoint.sh
.github/release-please/: .release-please-manifest.json  release-please-config.json
.github/scripts/: check-docs-links.py  check-supply-chain-policy.py  test_check_supply_chain_policy.py
.github/workflows/: benchmark.yml  build-base-mcp-server-docker-image.yml  build-native-multi-arch-image.yml  build-sandbox-base-docker-image.yml  claude-coreteam-mentions-shared.yml  claude-coreteam-mentions.yml  claude-coreteam-review-shared.yml  claude-coreteam-review.yml  clear-github-actions-cache.yml  deploy-dev-platform-images.yml  docker-image-scanning.yml  good-first-issue-welcome.yml  merge-external-contributors.yml  on-commits-to-main.yml  on-pull-requests.yml  platform-e2e-tests.yml  pr-title-linter.yml  publish-platform-helm-chart.yml  release-please.yml  toggle-release-freeze.yml  trigger-website-deploy.yml  warm-e2e-build-cache.yml  warm-e2e-image-caches.yml
ai-labs/: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
ai-labs/analyzer/: Cargo.toml  README.md
ai-labs/baton/: README.md
ai-labs/baton/baton-core/: CLAUDE.md  Cargo.toml
ai-labs/baton/baton-core/benches/: resolution.rs
ai-labs/baton/baton-core/examples/: demo.rs
ai-labs/baton/baton-core/src/: authority.rs  contract.rs  dimension.rs  engine.rs  label.rs  lib.rs  preset.rs  test_strategies.rs  turn.rs
ai-labs/cli/: Cargo.toml
ai-labs/cli/src/: main.rs
ai-labs/core/: Cargo.toml
ai-labs/dashboard/: Cargo.toml
ai-labs/dashboard/src/: lib.rs  load.rs  views.rs
ai-labs/dashboard/static/: styles.css
ai-labs/dashboard/templates/: base.html  grid.html  index.html  rollout.html  run.html
ai-labs/dashboard/tests/: dashboard.rs
ai-labs/dashboard/tests/fixtures/experiments/not_a_run/: readme.txt
ai-labs/dashboard/tests/fixtures/experiments/run_a/: aggregate.json  config.json  trajectory_analysis_20260701-120000.md  trajectory_analysis_claude_20260701-120000.md  trajectory_rubrics_20260101-000000.jsonl  trajectory_rubrics_20260701-120000.jsonl
ai-labs/dashboard/tests/fixtures/experiments/run_a/basic/alpha__kimi/: run.json  trajectory.md
ai-labs/dashboard/tests/fixtures/experiments/run_a/basic/beta__glm/: run.json
ai-labs/dashboard/tests/fixtures/experiments/run_a/basic/tricky__part__kimi/: run.json
ai-labs/dashboard/tests/fixtures/experiments/run_b/: config.json  trajectory_rubrics_20260701-130000.jsonl
ai-labs/dashboard/tests/fixtures/experiments/run_b/basic/solo__kimi/: run.json
ai-labs/envs/: apps.toml  archestra-api.toml  basic.toml
ai-labs/runner/: Cargo.toml
archestra-bench/: CLAUDE.md  README.md  lanes.toml
docs/: redirects.json
migration-kit/: README.md  SKILL.md
platform/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Tiltfile  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-brevo-mail.ts  turbo.json
platform/archestra-rs/: Cargo.toml
platform/archestra-rs/app-runtime-core/: Cargo.toml
platform/archestra-rs/app-runtime-core/src/: app_html.rs  app_html_lint.rs  envelope.rs  lib.rs
platform/archestra-rs/app-runtime-rs/: index.cjs  index.d.ts  package.json  smoke.test.cjs
platform/archestra-rs/app-runtime-rs/src/: lib.rs
platform/archestra-rs/image-core/: Cargo.toml
platform/archestra-rs/image-core/src/: lib.rs
platform/archestra-rs/image-rs/: Cargo.toml  index.cjs  index.d.ts  package.json  smoke.esm.test.mjs  smoke.test.cjs
platform/archestra-rs/image-rs/src/: lib.rs
platform/archestra-rs/napi-loader/: index.cjs  index.d.ts  package.json
platform/archestra-rs/sandbox-core/: README.md
platform/archestra-rs/sandbox-core/src/: backend.rs  lib.rs  session.rs  validation.rs
platform/archestra-rs/sandbox-core/src/backends/: dagger.rs
platform/archestra-rs/sandbox-rs/: index.cjs  package.json
platform/mcp_server_docker_image/: Dockerfile  pyproject.toml
platform/shared/: chat.ts  (+45 more)
(+2146 files in other folders)
