[package]
name = "baton-core"
version = "0.1.0"
edition = "2024"
publish = false
description = "ADT-based information-flow label engine for agent trajectories (prototype)"

[dependencies]
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }

[lints]
workspace = true

[[bench]]
name = "resolution"
harness = false
